[gd_scene load_steps=5 format=3 uid="uid://be4dvayan87rs"]

[ext_resource type="Script" path="res://PraxisMapper/Controls/MinOfflineData.gd" id="1_bglxq"]
[ext_resource type="Script" path="res://PraxisMapper/Scripts/DrawMinOfflineTile.gd" id="2_gf3mq"]
[ext_resource type="Script" path="res://PraxisMapper/Scripts/DrawMinOfflineNameTile.gd" id="3_n8v5u"]
[ext_resource type="Script" path="res://PraxisMapper/Scripts/DrawMinOfflineTerrainTile.gd" id="4_ctxvg"]

[node name="MinOfflineData" type="Node2D"]
script = ExtResource("1_bglxq")

[node name="svc" type="SubViewportContainer" parent="."]
offset_left = -10000.0
offset_right = -9960.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="svc"]
handle_input_locally = false
render_target_update_mode = 4

[node name="fullMap" type="Node2D" parent="svc/SubViewport"]
script = ExtResource("2_gf3mq")

[node name="subcam" type="Camera2D" parent="svc/SubViewport"]
anchor_mode = 0

[node name="svc2" type="SubViewportContainer" parent="."]
offset_left = -10000.0
offset_right = -9960.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="svc2"]
handle_input_locally = false
render_target_update_mode = 4

[node name="nameMap" type="Node2D" parent="svc2/SubViewport"]
script = ExtResource("3_n8v5u")

[node name="subcam" type="Camera2D" parent="svc2/SubViewport"]
anchor_mode = 0

[node name="svc4" type="SubViewportContainer" parent="."]
offset_left = -10000.0
offset_right = -9488.0
offset_bottom = 512.0

[node name="SubViewport" type="SubViewport" parent="svc4"]
handle_input_locally = false
render_target_update_mode = 4

[node name="terrainMap" type="Node2D" parent="svc4/SubViewport"]
script = ExtResource("4_ctxvg")

[node name="subcam" type="Camera2D" parent="svc4/SubViewport"]
anchor_mode = 0
